[package]
name = "cachebox"
version = "5.0.3"
edition = "2021"
description = "The fastest memoizing and caching Python library written in Rust"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/awolverp/cachebox"
repository = "https://github.com/awolverp/cachebox.git"
authors = ["awolverp"]

[lib]
name = "cachebox"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
panic = "abort"
strip = "symbols"

[dependencies.hashbrown]
version = "0.14.5"
default-features = false
features = ["inline-more", "raw"]

[dependencies.fastrand]
version = "2.3.0"

[dependencies.pyo3]
version = "0.27.0"
default-features = false
features = ["macros", "extension-module"]

[dependencies.cfg-if]
version = "1.0.3"

[dependencies.parking_lot]
version = "0.12.5"

[build-dependencies.pyo3-build-config]
version = "0.27.0"
features = ["resolve-config"]

[lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
