[package]
name = "cachebox"
version = "6.0.0"
edition = "2021"
description = "The fastest memoizing and caching Python library written in Rust"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/awolverp/cachebox"
repository = "https://github.com/awolverp/cachebox.git"
authors = ["awolverp"]

[lib]
name = "cachebox"
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
panic = "abort"
strip = true

[dependencies]
cfg-if = "1.0.4"
parking_lot = {version="0.12.5", default-features=false}
pyo3 = {version="0.28.3", default-features=false, features=["macros", "generate-import-lib"]}

[build-dependencies]
pyo3-build-config = {version="0.28.3", default-features=false, features=["resolve-config"]}

[features]
default = ["inline-more", "extension-module"]
inline-more = []
extension-module = ["pyo3/extension-module"]

[lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
